very cluttered but okf and graph traversal working
